k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kuber-test
    spec:
      containers:
        - name: kuber-test-pod
          image: test-kuber:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5555
  selector:
    matchLabels:
      app: kuber-test
