k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-test-service
spec:
  selector:
    app: kuber-test
  ports:
    - protocol: "TCP"
      port: 5555
      targetPort: 5555
  type: NodePort
