k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: kuber
                port:
                  number: 5555
